--- a/src/application/Estoque.fxml
+++ b/src/application/Estoque.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
@@ -87,6 +88,9 @@
                                              <VBox.margin>
                                                 <Insets bottom="5.0" left="10.0" right="5.0" top="15.0" />
                                              </VBox.margin>
+                                             <cursor>
+                                                <Cursor fx:constant="HAND" />
+                                             </cursor>
                                           </Button>
                                        </children>
                                        <HBox.margin>
@@ -106,7 +110,7 @@
                                  <children>
                                     <VBox prefHeight="61.0" prefWidth="200.0">
                                        <children>
-                                          <Label text="Identificação">
+                                          <Label text="Id">
                                              <VBox.margin>
                                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                              </VBox.margin>
@@ -140,7 +144,7 @@
                                     </VBox>
                                     <VBox prefHeight="71.0" prefWidth="230.0">
                                        <children>
-                                          <Button mnemonicParsing="false" text="Retirar">
+                                          <Button mnemonicParsing="false" onAction="#remover" text="Retirar">
                                              <VBox.margin>
                                                 <Insets bottom="5.0" left="10.0" right="5.0" top="15.0" />
                                              </VBox.margin>
@@ -166,6 +170,9 @@
                <BorderPane.margin>
                   <Insets bottom="5.0" top="5.0" />
                </BorderPane.margin>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
          </bottom>
       </BorderPane>
