--- a/src/application/App.fxml
+++ b/src/application/App.fxml
@@ -2,9 +2,11 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane prefHeight="450.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AppController">
@@ -13,36 +15,50 @@
          <children>
             <ImageView fitHeight="200.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
                <VBox.margin>
-                  <Insets left="50.0" right="50.0" />
+                  <Insets bottom="15.0" left="50.0" right="50.0" />
                </VBox.margin>
                <image>
                   <Image url="@../img/logo_simple.png" />
                </image>
             </ImageView>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#estoque" text="Estoque" textAlignment="CENTER">
-               <VBox.margin>
-                  <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
-               </VBox.margin>
+            <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0">
+               <children>
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#estoque" prefWidth="250.0" text="Estoque" textAlignment="CENTER">
+                     <padding>
+                        <Insets bottom="15.0" top="15.0" />
+                     </padding>
+                  </Button>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0">
+               <children>
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefWidth="250.0" text="Venda" textAlignment="CENTER">
+                     <padding>
+                        <Insets bottom="15.0" top="15.0" />
+                     </padding>
+                  </Button>
+               </children>
                <padding>
-                  <Insets bottom="10.0" left="130.0" right="130.0" top="10.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
-            </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Venda" textAlignment="CENTER">
-               <padding>
-                  <Insets bottom="10.0" left="135.0" right="135.0" top="10.0" />
-               </padding>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0">
+               <children>
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#sair" prefWidth="250.0" text="Deslogar" textAlignment="CENTER">
+                     <padding>
+                        <Insets bottom="15.0" top="15.0" />
+                     </padding>
+                  </Button>
+               </children>
+            </HBox>
+            <HBox alignment="BOTTOM_RIGHT" prefHeight="90.0" prefWidth="200.0">
+               <children>
+                  <Label text="V 1.0 Beta" />
+               </children>
                <VBox.margin>
-                  <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
+                  <Insets bottom="5.0" right="5.0" />
                </VBox.margin>
-            </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#sair" text="Sair" textAlignment="CENTER">
-               <padding>
-                  <Insets bottom="10.0" left="142.0" right="142.5" top="10.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
-               </VBox.margin>
-            </Button>
+            </HBox>
          </children>
       </VBox>
    </children>
