--- a/src/application/Cadastro.fxml
+++ b/src/application/Cadastro.fxml
@@ -47,6 +47,16 @@
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </padding>
                   </PasswordField>
+                  <Label text="Nome">
+                     <VBox.margin>
+                        <Insets bottom="2.0" top="5.0" />
+                     </VBox.margin>
+                  </Label>
+                  <PasswordField fx:id="tfPassw1">
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </PasswordField>
                </children>
                <VBox.margin>
                   <Insets bottom="20.0" left="25.0" right="25.0" top="25.0" />
@@ -54,15 +64,12 @@
             </VBox>
             <HBox alignment="CENTER" prefHeight="40.0" prefWidth="200.0">
                <children>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#login" text="Conectar" textAlignment="CENTER">
-                     <padding>
-                        <Insets bottom="10.0" left="45.0" right="45.0" top="10.0" />
-                     </padding>
+                  <Button alignment="CENTER" contentDisplay="CENTER" minHeight="40.0" minWidth="125.0" mnemonicParsing="false" onAction="#login" text="Cadastrar" textAlignment="CENTER">
                      <HBox.margin>
-                        <Insets right="5.0" />
+                        <Insets />
                      </HBox.margin>
                   </Button>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#cadastro" text="Cadastrar" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" minHeight="40.0" minWidth="125.0" mnemonicParsing="false" text="Sair" textAlignment="CENTER">
                      <padding>
                         <Insets bottom="10.0" left="45.0" right="45.0" top="10.0" />
                      </padding>
@@ -74,15 +81,6 @@
                <VBox.margin>
                   <Insets bottom="10.0" />
                </VBox.margin>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="0.0" prefWidth="200.0">
-               <children>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#sair" text="Sair" textAlignment="CENTER">
-                     <padding>
-                        <Insets bottom="10.0" left="135.0" right="135.0" top="10.0" />
-                     </padding>
-                  </Button>
-               </children>
             </HBox>
          </children>
       </VBox>
