--- a/src/application/Cadastro.fxml
+++ b/src/application/Cadastro.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="450.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoginController">
+<AnchorPane prefHeight="450.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CadastroController">
    <children>
       <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -52,11 +52,11 @@
                         <Insets bottom="2.0" top="5.0" />
                      </VBox.margin>
                   </Label>
-                  <PasswordField fx:id="tfPassw1">
+                  <TextField fx:id="tfNome">
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </padding>
-                  </PasswordField>
+                  </TextField>
                </children>
                <VBox.margin>
                   <Insets bottom="20.0" left="25.0" right="25.0" top="25.0" />
@@ -64,12 +64,12 @@
             </VBox>
             <HBox alignment="CENTER" prefHeight="40.0" prefWidth="200.0">
                <children>
-                  <Button alignment="CENTER" contentDisplay="CENTER" minHeight="40.0" minWidth="125.0" mnemonicParsing="false" onAction="#login" text="Cadastrar" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" minHeight="40.0" minWidth="125.0" mnemonicParsing="false" onAction="#cadastro" text="Cadastrar" textAlignment="CENTER">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
                   </Button>
-                  <Button alignment="CENTER" contentDisplay="CENTER" minHeight="40.0" minWidth="125.0" mnemonicParsing="false" text="Sair" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" minHeight="40.0" minWidth="125.0" mnemonicParsing="false" onAction="#sair" text="Voltar" textAlignment="CENTER">
                      <padding>
                         <Insets bottom="10.0" left="45.0" right="45.0" top="10.0" />
                      </padding>
