--- a/src/application/Vendas.fxml
+++ b/src/application/Vendas.fxml
@@ -115,7 +115,7 @@
                                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                              </VBox.margin>
                                           </Label>
-                                          <TextField fx:id="tfIdentificador" maxWidth="175.0" prefWidth="200.0">
+                                          <TextField fx:id="tfIdentificador">
                                              <VBox.margin>
                                                 <Insets bottom="5.0" left="5.0" right="5.0" />
                                              </VBox.margin>
@@ -132,7 +132,7 @@
                                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                              </VBox.margin>
                                           </Label>
-                                          <TextField fx:id="tfQuantia_r" maxWidth="200.0" prefWidth="200.0">
+                                          <TextField fx:id="tfQuantia_r" prefWidth="184.0">
                                              <VBox.margin>
                                                 <Insets bottom="5.0" left="5.0" right="5.0" />
                                              </VBox.margin>
@@ -162,67 +162,6 @@
                            </children></AnchorPane>
                   </content>
                 </Tab>
-                  <Tab text="Adicionar">
-                    <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <HBox prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                 <children>
-                                    <VBox prefHeight="61.0" prefWidth="200.0">
-                                       <children>
-                                          <Label text="Id">
-                                             <VBox.margin>
-                                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                             </VBox.margin>
-                                          </Label>
-                                          <TextField fx:id="tfIdentificador_a" maxWidth="175.0" prefWidth="200.0">
-                                             <VBox.margin>
-                                                <Insets bottom="5.0" left="5.0" right="5.0" />
-                                             </VBox.margin>
-                                          </TextField>
-                                       </children>
-                                       <HBox.margin>
-                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                       </HBox.margin>
-                                    </VBox>
-                                    <VBox prefHeight="61.0" prefWidth="200.0">
-                                       <children>
-                                          <Label text="Quantia">
-                                             <VBox.margin>
-                                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                             </VBox.margin>
-                                          </Label>
-                                          <TextField fx:id="tfQuantia_a" maxWidth="200.0" prefWidth="200.0">
-                                             <VBox.margin>
-                                                <Insets bottom="5.0" left="5.0" right="5.0" />
-                                             </VBox.margin>
-                                          </TextField>
-                                       </children>
-                                       <HBox.margin>
-                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                       </HBox.margin>
-                                    </VBox>
-                                    <VBox prefHeight="71.0" prefWidth="230.0">
-                                       <children>
-                                          <Button mnemonicParsing="false" onAction="#incluir" text="Incluir">
-                                             <VBox.margin>
-                                                <Insets bottom="5.0" left="10.0" right="5.0" top="15.0" />
-                                             </VBox.margin>
-                                             <padding>
-                                                <Insets bottom="10.0" left="15.0" right="15.0" top="10.0" />
-                                             </padding>
-                                          </Button>
-                                       </children>
-                                       <HBox.margin>
-                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                       </HBox.margin>
-                                    </VBox>
-                                 </children>
-                              </HBox>
-                           </children>
-                        </AnchorPane>
-                    </content>
-                  </Tab>
               </tabs>
             </TabPane>
          </top>
