--- a/src/application/Vendas.fxml
+++ b/src/application/Vendas.fxml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -14,167 +12,109 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="550.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.EstoqueController">
+<AnchorPane prefHeight="550.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.VendasController">
    <children>
-      <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <center>
-            <TableView fx:id="tbTabela" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-              <columns>
-                <TableColumn fx:id="cId" prefWidth="32.0" resizable="false" text="ID" />
-                <TableColumn fx:id="cProduto" prefWidth="450.0" resizable="false" text="Produto" />
-                  <TableColumn fx:id="cQuantia" prefWidth="85.0" resizable="false" text="Quantia" />
-                  <TableColumn fx:id="cPreco" prefWidth="85.0" resizable="false" text="Preço" />
-              </columns>
-            </TableView>
-         </center>
-         <top>
-            <TabPane prefHeight="100.0" prefWidth="650.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
-              <tabs>
-                <Tab text="Cadastrar">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <HBox layoutX="25.0" layoutY="18.0" maxHeight="65.0" prefHeight="100.0" prefWidth="650.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                 <children>
-                                    <VBox maxHeight="65.0" maxWidth="350.0" prefHeight="50.0" prefWidth="300.0">
-                                       <children>
-                                          <Label text="Produto">
-                                             <VBox.margin>
-                                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                             </VBox.margin>
-                                          </Label>
-                                          <TextField fx:id="tfProduto">
-                                             <VBox.margin>
-                                                <Insets bottom="5.0" left="5.0" right="5.0" />
-                                             </VBox.margin>
-                                          </TextField>
-                                       </children>
-                                       <HBox.margin>
-                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                       </HBox.margin>
-                                    </VBox>
-                                    <VBox prefHeight="200.0" prefWidth="100.0">
-                                       <HBox.margin>
-                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                       </HBox.margin>
-                                       <children>
-                                          <Label text="Quantia">
-                                             <VBox.margin>
-                                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                             </VBox.margin>
-                                          </Label>
-                                          <TextField fx:id="tfQuantia" />
-                                       </children>
-                                    </VBox>
-                                    <VBox prefHeight="200.0" prefWidth="100.0">
-                                       <children>
-                                          <Label text="Preço">
-                                             <VBox.margin>
-                                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                             </VBox.margin>
-                                          </Label>
-                                          <TextField fx:id="tfPreco" />
-                                       </children>
-                                       <HBox.margin>
-                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                       </HBox.margin>
-                                    </VBox>
-                                    <VBox prefHeight="200.0" prefWidth="100.0">
-                                       <children>
-                                          <Button mnemonicParsing="false" onAction="#adicionar" text="Adicionar">
-                                             <padding>
-                                                <Insets bottom="10.0" left="15.0" right="15.0" top="10.0" />
-                                             </padding>
-                                             <VBox.margin>
-                                                <Insets bottom="5.0" left="10.0" right="5.0" top="15.0" />
-                                             </VBox.margin>
-                                             <cursor>
-                                                <Cursor fx:constant="HAND" />
-                                             </cursor>
-                                          </Button>
-                                       </children>
-                                       <HBox.margin>
-                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                       </HBox.margin>
-                                    </VBox>
-                                 </children>
-                              </HBox>
-                           </children></AnchorPane>
-                  </content>
-                </Tab>
-                <Tab text="Remover">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <HBox layoutX="-23.0" layoutY="-29.0" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                 <children>
-                                    <VBox prefHeight="61.0" prefWidth="200.0">
-                                       <children>
-                                          <Label text="Id">
-                                             <VBox.margin>
-                                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                             </VBox.margin>
-                                          </Label>
-                                          <TextField fx:id="tfIdentificador">
-                                             <VBox.margin>
-                                                <Insets bottom="5.0" left="5.0" right="5.0" />
-                                             </VBox.margin>
-                                          </TextField>
-                                       </children>
-                                       <HBox.margin>
-                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                       </HBox.margin>
-                                    </VBox>
-                                    <VBox prefHeight="61.0" prefWidth="200.0">
-                                       <children>
-                                          <Label text="Quantia">
-                                             <VBox.margin>
-                                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                             </VBox.margin>
-                                          </Label>
-                                          <TextField fx:id="tfQuantia_r" prefWidth="184.0">
-                                             <VBox.margin>
-                                                <Insets bottom="5.0" left="5.0" right="5.0" />
-                                             </VBox.margin>
-                                          </TextField>
-                                       </children>
-                                       <HBox.margin>
-                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                       </HBox.margin>
-                                    </VBox>
-                                    <VBox prefHeight="71.0" prefWidth="230.0">
-                                       <children>
-                                          <Button mnemonicParsing="false" onAction="#remover" text="Retirar">
-                                             <VBox.margin>
-                                                <Insets bottom="5.0" left="10.0" right="5.0" top="15.0" />
-                                             </VBox.margin>
-                                             <padding>
-                                                <Insets bottom="10.0" left="15.0" right="15.0" top="10.0" />
-                                             </padding>
-                                          </Button>
-                                       </children>
-                                       <HBox.margin>
-                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                       </HBox.margin>
-                                    </VBox>
-                                 </children>
-                              </HBox>
-                           </children></AnchorPane>
-                  </content>
-                </Tab>
-              </tabs>
-            </TabPane>
-         </top>
+      <BorderPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <bottom>
-            <Button mnemonicParsing="false" onAction="#voltar" text="Voltar" BorderPane.alignment="CENTER">
-               <BorderPane.margin>
-                  <Insets bottom="5.0" top="5.0" />
-               </BorderPane.margin>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
+            <VBox prefHeight="494.0" prefWidth="650.0" BorderPane.alignment="CENTER">
+               <children>
+                  <TableView fx:id="tbTabela" prefHeight="431.0" prefWidth="640.0">
+                    <columns>
+                      <TableColumn fx:id="cProduto" prefWidth="450.0" resizable="false" text="Produto" />
+                      <TableColumn fx:id="cQuantia" prefWidth="85.0" resizable="false" text="Quantia" />
+                        <TableColumn fx:id="cPreco" prefWidth="115.0" resizable="false" text="Preço" />
+                    </columns>
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" />
+                     </VBox.margin>
+                  </TableView>
+                  <HBox alignment="CENTER_RIGHT" fillHeight="false">
+                     <children>
+                        <Label text="Valor">
+                           <HBox.margin>
+                              <Insets right="10.0" />
+                           </HBox.margin>
+                        </Label>
+                        <TextField fx:id="tfPrecoTotal" editable="false" prefHeight="25.0" prefWidth="100.0" promptText="R$">
+                           <HBox.margin>
+                              <Insets right="5.0" />
+                           </HBox.margin>
+                        </TextField>
+                        <Button mnemonicParsing="false" text="Finalizar">
+                           <HBox.margin>
+                              <Insets left="15.0" right="5.0" />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="15.0" />
+                     </VBox.margin>
+                  </HBox>
+               </children>
+            </VBox>
          </bottom>
+         <top>
+            <VBox prefHeight="56.0" prefWidth="650.0" BorderPane.alignment="CENTER">
+               <children>
+                  <HBox prefHeight="50.0" prefWidth="200.0">
+                     <children>
+                        <VBox prefHeight="37.0" prefWidth="260.0">
+                           <children>
+                              <Label text="Produto" />
+                              <ComboBox fx:id="cbProduto" onAction="#inicializaCBcampos" prefWidth="255.0" />
+                           </children>
+                           <HBox.margin>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </HBox.margin>
+                        </VBox>
+                        <VBox prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Label text="Quantia" />
+                              <TextField fx:id="tfQuantia" />
+                           </children>
+                           <HBox.margin>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </HBox.margin>
+                        </VBox>
+                        <VBox prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Label text="Quant. Estoque">
+                                 <VBox.margin>
+                                    <Insets top="5.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <TextField fx:id="tfQuantiaEstoque" editable="false" promptText="Und" style="-fx-border-color: none;" />
+                           </children>
+                        </VBox>
+                        <VBox prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Label text="Preço por Und." />
+                              <TextField fx:id="tfPreco" editable="false" promptText="R$" />
+                           </children>
+                           <HBox.margin>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </HBox.margin>
+                        </VBox>
+                        <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="SOMETIMES">
+                           <HBox.margin>
+                              <Insets left="5.0" right="5.0" />
+                           </HBox.margin>
+                           <children>
+                              <Button mnemonicParsing="false" onAction="#adicionar" text="Adicionar">
+                                 <padding>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </padding>
+                                 <VBox.margin>
+                                    <Insets />
+                                 </VBox.margin>
+                              </Button>
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+         </top>
       </BorderPane>
    </children>
 </AnchorPane>
