--- a/src/application/Login.fxml
+++ b/src/application/Login.fxml
@@ -52,19 +52,31 @@
                   <Insets bottom="20.0" left="25.0" right="25.0" top="25.0" />
                </VBox.margin>
             </VBox>
-            <HBox alignment="CENTER" prefHeight="40.0" prefWidth="200.0">
+            <HBox alignment="CENTER" prefHeight="0.0" prefWidth="200.0">
                <children>
                   <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#login" text="Conectar" textAlignment="CENTER">
                      <padding>
-                        <Insets bottom="10.0" left="45.0" right="45.0" top="10.0" />
+                        <Insets bottom="10.0" left="125.0" right="125.0" top="10.0" />
+                     </padding>
+                  </Button>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="40.0" prefWidth="200.0">
+               <children>
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#cadastro" text="Cadastrar" textAlignment="CENTER">
+                     <padding>
+                        <Insets bottom="10.0" left="55.0" right="55.0" top="10.0" />
                      </padding>
                      <HBox.margin>
                         <Insets right="5.0" />
                      </HBox.margin>
                   </Button>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#cadastro" text="Cadastrar" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#sair" text="Sair" textAlignment="CENTER">
                      <padding>
-                        <Insets bottom="10.0" left="45.0" right="45.0" top="10.0" />
+                        <Insets bottom="10.0" left="55.0" right="55.0" top="10.0" />
                      </padding>
                      <HBox.margin>
                         <Insets left="5.0" />
@@ -72,17 +84,8 @@
                   </Button>
                </children>
                <VBox.margin>
-                  <Insets bottom="10.0" />
+                  <Insets />
                </VBox.margin>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="0.0" prefWidth="200.0">
-               <children>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#sair" text="Sair" textAlignment="CENTER">
-                     <padding>
-                        <Insets bottom="10.0" left="135.0" right="135.0" top="10.0" />
-                     </padding>
-                  </Button>
-               </children>
             </HBox>
          </children>
       </VBox>
